--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -4,24 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.IngredientActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ui.IngredientActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/ingredient_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_weight="0"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimaryDark"
+        style="@style/ToolBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:titleTextColor="@android:color/white" />
 
     <FrameLayout
         android:id="@+id/ingredient_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:layout_weight="1"/>
+        style="@style/ActivityFrameLayout"
+        android:layout_weight="1" />
 
 </LinearLayout>
