--- a/app/src/main/res/layout/activity_baking_app_widget_config.xml
+++ b/app/src/main/res/layout/activity_baking_app_widget_config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,21 +10,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/master_margin"
         android:gravity="center"
-        android:text="Select Recipe"
-        android:textSize="26sp" />
+        android:text="@string/select_recipe"
+        android:textSize="@dimen/widget_text_size" />
 
     <Spinner
         android:id="@+id/widget_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
+        android:layout_margin="@dimen/master_margin" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/master_margin"
         android:onClick="confirmConfiguration"
-        android:text="Done" />
+        android:text="@string/select_recipe_button" />
 </LinearLayout>
