--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/ingredients_button"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="8dp"
+        android:layout_height="@dimen/ingredients_button_height"
+        android:layout_margin="@dimen/master_margin"
         android:background="@android:color/holo_blue_light"
-        android:inputType="textCapWords"
-        android:textSize="25sp"
+        android:textSize="@dimen/normal_text_size"
         tools:text="Ingredients" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_steps_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
+        android:layout_margin="@dimen/master_margin" />
 
 </LinearLayout>
