--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,21 +8,22 @@
     <LinearLayout
         android:id="@+id/videoLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_height="@dimen/weight_thickness"
+        android:layout_margin="@dimen/master_margin"
         android:layout_weight="3"
+        android:gravity="center"
         android:orientation="vertical">
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/video_player_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/weight_thickness"
             android:layout_weight="1"/>
 
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/thumbnail_player_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/weight_thickness"
             android:layout_weight="1"/>
 
     </LinearLayout>
@@ -32,7 +32,7 @@
     <TextView
         android:id="@+id/step_description_text_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/weight_thickness"
         android:layout_weight="2"
         android:gravity="center"
         tools:text="Descriptions" />
