--- a/app/src/main/res/layout/ingredient_rv_item.xml
+++ b/app/src/main/res/layout/ingredient_rv_item.xml
@@ -7,64 +7,58 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="textCapWords"
-            android:text="quantity" />
+            android:text="@string/quantity" />
 
         <TextView
             android:id="@+id/quantity_value"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="start|left"
+            android:gravity="start"
             tools:text="quantity value" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="textCapWords"
-            android:text="measure" />
+            android:text="@string/measure" />
 
         <TextView
             android:id="@+id/measure_value"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="start|left"
+            android:gravity="start"
             tools:text="measure value" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="textCapWords"
-            android:text="ingredient" />
+            android:text="@string/ingredient" />
 
         <TextView
             android:id="@+id/ingredient_value"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="start|left"
+            android:gravity="start"
             tools:text="ingredient value" />
     </LinearLayout>
 
@@ -72,6 +66,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_margin="8dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
