--- a/app/src/main/res/layout/recepes_rv_item.xml
+++ b/app/src/main/res/layout/recepes_rv_item.xml
@@ -3,13 +3,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="@dimen/recipe_card_height"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="4dp"
-    android:layout_margin="8dp"
-    >
+    android:layout_margin="@dimen/master_margin"
+    card_view:cardCornerRadius="@dimen/recipe_card_radius">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,20 +15,21 @@
 
         <ImageView
             android:id="@+id/recipe_image_view"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:contentDescription="@string/recipe_image" />
 
         <TextView
             android:id="@+id/recipe_title_text_view"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/weight_thickness"
             android:layout_height="match_parent"
             android:layout_weight="3"
+            android:background="@android:color/holo_red_light"
             android:gravity="center"
-            tools:text="Hii This my first recipes"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:background="@android:color/holo_red_light"/>
+            android:textSize="@dimen/normal_text_size"
+            tools:text="Hii This my first recipes" />
     </LinearLayout>
 
 
