--- a/app/src/main/res/layout/recipe_steps_rv_item.xml
+++ b/app/src/main/res/layout/recipe_steps_rv_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/step_button"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:layout_margin="4dp"
-    android:inputType="textCapWords"
-    android:id="@+id/step_button">
+    android:layout_height="@dimen/step_button_height"
+    android:layout_margin="@dimen/master_margin">
 
 </Button>
