--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,15 @@
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
-    <dimen name="widget_margin">8dp</dimen>
 
+    <dimen name="master_margin">8dp</dimen>
+    <dimen name="widget_text_size">26sp</dimen>
+    <dimen name="large_text_size">32sp</dimen>
+    <dimen name="view_thickness">1dp</dimen>
+    <dimen name="weight_thickness">0dp</dimen>
+    <dimen name="normal_text_size">24sp</dimen>
+    <dimen name="ingredients_button_height">100dp</dimen>
+    <dimen name="recipe_card_height">150dp</dimen>
+    <dimen name="recipe_card_radius">4dp</dimen>
+    <dimen name="step_button_height">75dp</dimen>
 </resources>
