--- a/app/src/main/res/layout-sw600dp/activity_recipe_details.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_details.xml
@@ -36,7 +36,8 @@
             android:layout_width="@dimen/weight_thickness"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:scaleType="centerInside" />
+            android:scaleType="centerInside"
+            android:layout_margin="@dimen/master_margin"/>
 
     </LinearLayout>
 
